Dart/testData/highlighting/EscapeSequences.dart
var a1 = r"\\\x12\u12fF\u{1234eF}\";
var a2 = '''<info descr="null">\\</info>-<info descr="null">\'</info>-<info descr="null">\"</info>-<info descr="null">\r</info>-<info descr="null">\n</info>-<info descr="null">\t</info>-<info descr="null">\b</info>-<info descr="null">\v</info>-<info descr="null">\ </info>''';
var a3 = """-<info descr="null">\x19</info>-<info descr="null">\xaF</info>-<info descr="null">\u19bE</info>-""";
var a4 = '-<info descr="null">\u{0}</info>-<info descr="null">\u{0F}</info>-<info descr="null">\u{0af}</info>-<info descr="null">\u{09Be}</info>-<info descr="null">\u{AbCd0}</info>-<info descr="null">\u{023456}</info>-';
var a5 = "<error descr="Invalid escape sequence">\x</error>" "11<error descr="Invalid escape sequence">\xQ</error>" '<error descr="Invalid escape sequence">\xF</error>' "<error descr="Invalid escape sequence">\xQF</error>" "<error descr="Invalid escape sequence">\x1Q</error>" "<error descr="Invalid escape sequence">\xQQ</error>Q" "<error descr="Invalid escape sequence">\x1Q</error>Q";
var a6 = "<error descr="Invalid escape sequence">\u</error>" "FF<error descr="Invalid escape sequence">\uQ</error>" '<error descr="Invalid escape sequence">\uF</error>' "<error descr="Invalid escape sequence">\uQF</error>" "<error descr="Invalid escape sequence">\u1Q</error>" "<error descr="Invalid escape sequence">\uQQQ</error>" "<error descr="Invalid escape sequence">\u12fQ</error>" "<error descr="Invalid escape sequence">\u12f </error>" "<error descr="Invalid escape sequence">\uFFF </error>F";
var a7 = "<error descr="Invalid escape sequence">\u{</error>" "1} <error descr="Invalid escape sequence">\u{</error>123456789" "<error descr="Invalid escape sequence">\u{}</error>" "<error descr="Invalid escape sequence">\u{ }</error>" "<error descr="Invalid escape sequence">\u{123FFq}</error> u{z}" """
<error descr="Invalid escape sequence">\u{1234567}</error>
""";
